feat(JDK): JDK各版本示例